# PocketMoneyApp

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/pocketmoneyapp/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/pocketmoneyapp/: MainActivity.kt  TransactionListActivity.kt
app/src/main/java/com/example/pocketmoneyapp/data/: TransactionDto.kt  WalletDto.kt
app/src/main/java/com/example/pocketmoneyapp/ui/: TransactionAdapter.kt  WalletAdapter.kt
app/src/main/res/layout/: activity_main.xml  activity_transaction_list.xml  dialog_add_transaction.xml  dialog_add_wallet.xml  dialog_edit_delete_transaction.xml  dialog_edit_delete_wallet.xml  item_transaction.xml  item_wallet.xml  list_item_transaction.xml  list_item_wallet.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/example/pocketmoneyapp/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
native_core/: build.gradle.kts
native_core/src/androidTest/java/com/example/native_core/: ExampleInstrumentedTest.kt
native_core/src/main/cpp/: CMakeLists.txt  native_core.cpp
native_core/src/main/cpp/data/: DatabaseHelper.cpp  DatabaseHelper.h  TransactionRepository.cpp  TransactionRepository.h  WalletRepository.cpp  WalletRepository.h
native_core/src/main/cpp/domain/: Transaction.cpp  Transaction.h  Wallet.cpp  Wallet.h
native_core/src/test/java/com/example/native_core/: ExampleUnitTest.kt
(+3 files in other folders)
